# final_project

./: .env  .gitignore  Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml
.github/workflows/: test_and_build.yml
src/app/: api.py  db.py  main.py  models.py  web.py
src/app/llm/: gemma_client.py
src/app/templates/: history.html  index.html
tests/: test_chat.py
