[tool.poetry]
name = "friends-bot"
version = "0.1.0"
description = "Chatbot in the style of Phoebe from Friends"
authors = ["You <you@example.com>"]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
